# minpin

./: .dockerignore  .env.example  .gitattributes  .gitignore  .impeccable.md  DESIGN.md  README.md  package.json  playwright.config.ts  playwright.performance.config.ts  playwright.runtime.config.ts  pnpm-lock.yaml
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/api/app/: __init__.py  main.py
services/api/app/ai/: __init__.py  errors.py  orchestrator.py  policy.py  prompts.py  protocols.py  providers.py  retrieval.py  schemas.py
services/api/app/api/: admin_schemas.py  auth_schemas.py  card_asset_schemas.py  catalog_schemas.py  dependencies.py  enterprise_schemas.py  errors.py  export_schemas.py  member_schemas.py  (+8 more)
services/api/migrations/: env.py
services/api/tests/: conftest.py  test_admin_routes.py  test_admin_store.py  test_ai_orchestrator.py  test_ai_policy.py  test_ai_providers.py  test_ai_retrieval.py  test_ai_runtime.py  test_audit.py  test_auth_routes.py  test_card_assets_routes.py  test_catalog_routes.py  test_catalog_store.py  test_config.py  test_cors_contract.py  test_database_contract.py  test_dependencies.py  test_dynamic_llm_runtime.py  test_employee_analytics_routes.py  test_enterprise_content_schemas.py  test_enterprise_readiness.py  test_evaluation_metrics.py  test_export_routes.py  test_faq_answer_cache.py  test_index_embeddings.py  test_knowledge_import_routes.py  test_knowledge_import_security.py  test_logging_security.py  test_member_routes.py  test_member_store.py  test_metrics.py  test_openapi_implementation.py  test_opportunity_routes.py  test_pii.py  test_platform_bootstrap.py  test_platform_bootstrap_postgres_integration.py  test_platform_contract_schemas.py  test_platform_llm_profiles_core.py  test_platform_llm_routes.py  test_platform_onboarding.py  (+18 more)
services/worker/: Dockerfile  README.md  pyproject.toml
services/worker/cf_worker/: __init__.py  celery_app.py  config.py  domain.py  evaluation.py  handlers.py  health.py  knowledge_imports.py  logging.py  repository.py  scheduled_publish.py  service.py  tasks.py
services/worker/tests/: test_celery_config.py  test_config.py  test_evaluation.py  test_exports.py  test_handlers.py  test_knowledge_imports.py  test_postgres_integration.py  test_profile_retention.py  test_repository_contract.py  test_scheduled_publish.py  test_service.py  test_task_database_cooldown.py
(+348 files in other folders)
