[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "cf-ai-card-api"
version = "0.1.0"
description = "Production API and RAG orchestration for the CF digital business card platform"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "cryptography>=48.0.1,<49",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pgvector>=0.3,<1",
  "pypdf>=6.6,<7",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pyjwt>=2.10,<3",
  "python-docx>=1.2,<2",
  "python-multipart>=0.0.22,<1",
  "redis>=5.2,<7",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=24.4,<27",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "anyio>=4.8,<5",
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "respx>=0.22,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "integration: requires a disposable migrated PostgreSQL database",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "ASYNC", "S"]
ignore = ["S101"]
