[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "cf-ai-card-worker"
version = "0.1.0"
description = "Celery/Redis outbox worker for the CF digital business card platform"
requires-python = ">=3.12,<3.14"
dependencies = [
  "asyncpg>=0.30,<1",
  "celery[redis]>=5.6.3,<5.7",
  "httpx>=0.28,<1",
  "pypdf>=6.6,<7",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-docx>=1.2,<2",
  "redis>=5.2,<7",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=24.4,<27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["cf_worker"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires a migrated local PostgreSQL database and worker role",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "ASYNC", "S"]
ignore = ["S101"]
